Fri Oct 31 14:57:46 2003  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/xml.[ch]:
	* makeinfo/insertion.c (handle_verbatim_environment): use
	<![[CDATA...]]> for @verbatim in docbook output too.

2003-10-31  Karl Berry  <karl@gnu.org>

	* TODO: image scaling in html needed.
	* makeinfo/cmds.c (cm_strong): only give the warning if we're
	actually producing Info output.

	* makeinfo/cmds.c (cm_strong): reword message and check for only
	*Note:, not *Note:*.  From: Kevin Ryde <user42@zip.com.au>, 31 Oct
	2003 06:19:05 +1000.

2003-10-29  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Def Cmd Template): shorten.
	* makeinfo/makeinfo.c: help message.
	* doc/texinfo.tex: version update.
	* makeinfo/texinfo.dtd: update copyright.

2003-10-28  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/cmds.c: output correct elements for @command,
	@env, @file, @option and @samp commands, and also handle
	@titlepage in xml output.  New commands: @docbook,
	@ifdocbook and @ifnotdocbook for conditional docbook output.

	* makeinfo/defun.c (args_from_string): allow comma to be
	recognized as a separate token to help XML side of things.
	(process_defun_args): let xml.c handle xml output.

	* makeinfo/insertion.c: handle @verbatim properly when
	outputting xml.  This means: surround data with a <verbatim>
	block, use <![[CDATA ... ]]> and disable escaping.
	Recognize @titlepage, @docbook, @ifdocbook and
	@ifnotdocbook.
	(cm_insert_copying): do not trust the consistency of
	copying_text, because full_expansion doesn't let open
	docbook elements to be closed.
	(cm_item): generate correct index entries in xml output.

	* makeinfo/insertion.h: new insertion types: ifdocbook,
	ifnotdocbook, titlepage.

	* makeinfo/lang.c: notify language changes with
	@documentlanguage in xml output, using <documentlanguage
	xml:lang=".." /> elements.

	* makeinfo/makeinfo.c: trailing encoding settings in html
	output are commented.  Do not append any encoding settings